--- a/index.html
+++ b/index.html
@@ -4,109 +4,36 @@
   <meta charset="UTF-8" />
   <meta name="description" content="SoloDevelopment - Game Dev Community" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SoloDevelopment</title>
-
-  <!-- Google Font -->
+  <title>SoloDevelopment - Home</title>
+  <link rel="stylesheet" href="style.css" />
+  <!-- Google Fonts (Optional) -->
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
     rel="stylesheet"
   />
-
-  <style>
-    /* Basic Reset */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Inter', sans-serif;
-      background: #f4f4f4;
-      color: #333;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-
-    header,
-    footer {
-      background: #1f1f1f;
-      color: #fff;
-      text-align: center;
-      padding: 1rem;
-    }
-
-    main {
-      flex: 1;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 2rem;
-    }
-
-    .content {
-      text-align: center;
-      max-width: 600px;
-      margin: 0 auto;
-      background: #fff;
-      padding: 2rem;
-      border-radius: 8px;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-    }
-
-    p {
-      font-size: 1.125rem;
-      line-height: 1.5;
-      margin-bottom: 2rem;
-    }
-
-    .links {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      margin-bottom: 2rem;
-    }
-
-    .links a {
-      text-decoration: none;
-      color: #fff;
-      background: #0070f3;
-      padding: 0.75rem 1.5rem;
-      border-radius: 4px;
-      font-weight: 600;
-      transition: background 0.2s ease;
-    }
-
-    .links a:hover {
-      background: #005bbd;
-    }
-
-    footer p {
-      margin: 0.5rem 0;
-      font-size: 0.875rem;
-    }
-  </style>
 </head>
 <body>
+
   <header>
     <h2>SoloDevelopment.org</h2>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="halloffame.html">Hall of Fame</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
     <div class="content">
       <h1>Welcome to the SoloDevelopment Community</h1>
       <p>
-        We’re a vibrant game dev community focused on solo developers. Join us for resources, 
-        support, and a place to share your work and challenges.
+        We’re a vibrant game dev community focused on solo developers. Join us for
+        resources, support, and a place to share your work and challenges.
       </p>
 
       <div class="links">
-        <!-- Updated Discord link -->
         <a href="https://discord.gg/4R5bB9nMSV" target="_blank" rel="noopener noreferrer">
           Join our Discord
         </a>
@@ -119,7 +46,7 @@
       </div>
 
       <p>
-        Stay tuned for announcements about game jams, collaboration events, and other 
+        Stay tuned for announcements about game jams, collaboration events, and other
         opportunities to connect with fellow creators.
       </p>
     </div>
@@ -128,5 +55,6 @@
   <footer>
     <p>© 2024 SoloDevelopment.org — All rights reserved.</p>
   </footer>
+
 </body>
 </html>
