updated events and hall of fame

--- a/halloffame.html
+++ b/halloffame.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SoloDevelopment - Hall of Fame</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- Google Fonts (Optional) -->
+  <!-- Google Fonts (optional) -->
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
     rel="stylesheet"
@@ -27,33 +27,103 @@
 
   <main>
     <div class="content">
-      <h1>Hall of Fame</h1>
+      <!-- Hall of Fame Section -->
+      <h1>🏅 SoloDevelopment Hall of Fame 🏅</h1>
+      <h2>Most Recent Winners</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Jam</th>
+            <th>Winner(s)</th>
+            <th>Game</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>🎉 SoloDevelopment Game Jam 5</td>
+            <td>@drahmen, @Emcee, @log64</td>
+            <td>
+              <a href="https://drahmen.itch.io/guardian-of-the-grave" target="_blank"><strong>Guardian of the Grave</strong></a>,&nbsp;
+              <a href="https://emceetheguy.itch.io/hanktheimp" target="_blank"><strong>Hank The Imp</strong></a>,&nbsp;
+              <a href="https://log64.itch.io/maybel-in-the-hazy-hotel" target="_blank"><strong>Maybel in the Hazy Hotel</strong></a>
+            </td>
+          </tr>
+          <tr>
+            <td>🎉 SoloDevelopment Game Jam 4</td>
+            <td>@blackvoidtytan, @gripgrap, @yikag</td>
+            <td>
+              <a href="https://blackvoidmedia.itch.io/mutual-assured-destruction-simulator" target="_blank"><strong>Mutual Assured Destruction Simulator</strong></a>,&nbsp;
+              <a href="https://gripgrap.itch.io/dodge-the-question" target="_blank"><strong>Dodge the Question</strong></a>,&nbsp;
+              <a href="https://yikag.itch.io/six-rolls-six" target="_blank"><strong>Six Rolls Six</strong></a>
+            </td>
+          </tr>
+          <tr>
+            <td>🏆 Third Marathon Jam</td>
+            <td>@blackvoidtytan</td>
+            <td>
+              <a href="https://blackvoidmedia.itch.io/out-here-alone" target="_blank"
+                ><strong>Out Here Alone</strong></a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>❄️ Winter Jam</td>
+            <td>@ensom_</td>
+            <td>
+              <a href="https://uppastgamer.itch.io/track-master" target="_blank"
+                ><strong>Track Master</strong></a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>🏆 Second Marathon Jam</td>
+            <td>@fernandolv3</td>
+            <td>
+              <a href="https://fernandolv3.itch.io/scavengersfromplanetx" target="_blank"
+                ><strong>Scavengers from Planet X</strong></a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>🎃 Halloween Jam</td>
+            <td>@blackvoidtytan, @radagast08</td>
+            <td>
+              <a href="https://blackvoidmedia.itch.io/i-came-home-tonight" target="_blank"
+                ><strong>I Came Home Tonight</strong></a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>🏆 Marathon Jam</td>
+            <td>@lonelylily</td>
+            <td>
+              <a href="https://razzie-dev.itch.io/df-fbla" target="_blank"
+                ><strong>DF FBLA</strong></a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>🏆 First r/SoloDevelopment Jam</td>
+            <td>@blackvoidtytan</td>
+            <td>
+              <a href="https://blackvoidmedia.itch.io/theres-something-wrong-with-this-world"
+                target="_blank"
+                ><strong>There's Something Wrong With This World</strong></a
+              >
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
       <p>
-        Celebrate the amazing projects and individuals who’ve gone above and beyond in our community!
+        Account Managed by
+        <a href="https://practicalnpc.itch.io/" target="_blank">PracticalNPC</a>
       </p>
-
-      <!-- Example: Hall of Fame entries -->
-      <section>
-        <h2>Game Jam #1 Winner</h2>
-        <p><strong>Username/Team:</strong> AwesomeDev</p>
-        <p><strong>Project:</strong> A mind-blowing puzzle game built in 48 hours!</p>
-      </section>
-      <hr />
-
-      <section>
-        <h2>Game Jam #2 Winner</h2>
-        <p><strong>Username/Team:</strong> SoloStar</p>
-        <p><strong>Project:</strong> A platformer that set new standards for level design!</p>
-      </section>
-      <hr />
-
-      <!-- Add more entries as needed -->
     </div>
   </main>
 
   <footer>
     <p>© 2024 SoloDevelopment.org — All rights reserved.</p>
   </footer>
-
 </body>
 </html>
