--- a/events.html
+++ b/events.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="SoloDevelopment - Past Events" />
+  <meta name="description" content="SoloDevelopment - Events & Jams" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SoloDevelopment - Events</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- Google Fonts (Optional) -->
+  <!-- Google Fonts (optional) -->
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
     rel="stylesheet"
@@ -27,39 +27,122 @@
 
   <main>
     <div class="content">
-      <h1>Our Past Events & Game Jams</h1>
+      <!-- Current Jam -->
+      <h2>
+        Current Jam:
+        <a href="https://itch.io/jam/solodev-marathon-jam-4" target="_blank"
+          >SoloDevelopment&nbsp;Marathon Jam #4</a
+        >
+      </h2>
+
+      <!-- About Us -->
+      <h2>About Us - SoloDevelopment Community</h2>
+      <p><em>By SoloDevs, For SoloDevs</em></p>
       <p>
-        Here you’ll find a list of all the events we’ve run or participated in, with links to their details, winners, and more!
+        Welcome to SoloDevelopment, a community built by solo developers for solo
+        developers! We provide a space where indie devs can connect, share
+        experiences, and support each other on our solo game development journeys.
+        Join our Discord:
+        <a href="https://discord.gg/4R5bB9nMSV" target="_blank"
+          >https://discord.gg/4R5bB9nMSV</a
+        >.
+      </p>
+      <p>
+        We regularly host game jams and encourage developers of all skill levels to
+        participate. Whether you're looking to collaborate, get feedback, or just
+        learn from others, this is the place for you!
       </p>
 
-      <!-- Paste your jam listings or event HTML here -->
-      <section>
-        <h2>Example Jam #1</h2>
-        <p><strong>Date:</strong> June 2024</p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          <a href="#" target="_blank">View Jam Page</a>
-        </p>
-      </section>
-      <hr />
+      <!-- Latest Marathon Jams -->
+      <h2>Latest Marathon Jams</h2>
+      <ul>
+        <li>
+          <a
+            href="https://itch.io/jam/marathon-jam-by-solodevelopment"
+            target="_blank"
+            >Marathon Jam 1</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://itch.io/jam/marathon-jam-2022-by-solodevelopment"
+            target="_blank"
+            >Marathon Jam 2</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://itch.io/jam/marathon-jam-3-by-solodevelopment"
+            target="_blank"
+            >Marathon Jam 3</a
+          >
+        </li>
+      </ul>
 
-      <section>
-        <h2>Example Jam #2</h2>
-        <p><strong>Date:</strong> August 2024</p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          <a href="#" target="_blank">View Jam Page</a>
-        </p>
-      </section>
-      <hr />
+      <!-- 72-hour Jams -->
+      <h2>72-hour Jams</h2>
+      <ul>
+        <li>
+          <a
+            href="https://itch.io/jam/winter-jam-by-solodevelopment"
+            target="_blank"
+            >Winter Jam</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://itch.io/jam/solodevelopment-game-jam"
+            target="_blank"
+            >Minimalism Jam</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://itch.io/jam/halloween-jam-2021"
+            target="_blank"
+            >Halloween Jam 2021</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://itch.io/jam/solo-dev-game-jam-4"
+            target="_blank"
+            >Solodev Jam #4</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://itch.io/jam/solo-dev-game-jam-5-spooky-jam"
+            target="_blank"
+            >Solodev Jam #5</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://itch.io/jam/solodevelopment-jam-6-winter-jam"
+            target="_blank"
+            >Solodev Jam #6</a
+          >
+        </li>
+      </ul>
 
-      <!-- Add as many past events as you like -->
+      <!-- Community Links -->
+      <p>Join our growing community:</p>
+      <ul>
+        <li>
+          <a href="https://www.reddit.com/r/solodevelopment" target="_blank"
+            >Subreddit</a
+          >
+        </li>
+        <li>
+          <a href="https://discord.gg/4R5bB9nMSV" target="_blank">Discord</a>
+        </li>
+      </ul>
     </div>
   </main>
 
   <footer>
     <p>© 2024 SoloDevelopment.org — All rights reserved.</p>
   </footer>
-
 </body>
 </html>
