--- a/index.html
+++ b/index.html
@@ -6,14 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SoloDevelopment - Home</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- Google Fonts (Optional) -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
-    rel="stylesheet"
-  />
 </head>
 <body>
-
   <header>
     <h2>SoloDevelopment.org</h2>
     <nav>
@@ -29,32 +23,18 @@
     <div class="content">
       <h1>Welcome to the SoloDevelopment Community</h1>
       <p>
-        We’re a vibrant game dev community focused on solo developers. Join us for
-        resources, support, and a place to share your work and challenges.
+        A place for solo game developers to learn, share, and build amazing games.
       </p>
-
       <div class="links">
-        <a href="https://discord.gg/4R5bB9nMSV" target="_blank" rel="noopener noreferrer">
-          Join our Discord
-        </a>
-        <a href="https://reddit.com/r/SoloDevelopment" target="_blank" rel="noopener noreferrer">
-          Visit r/SoloDevelopment
-        </a>
-        <a href="https://SoloDevelopment.itch.io" target="_blank" rel="noopener noreferrer">
-          Check out our Itch.io
-        </a>
+        <a href="https://discord.gg/4R5bB9nMSV" target="_blank">Join our Discord</a>
+        <a href="https://www.reddit.com/r/solodevelopment" target="_blank">Subreddit</a>
+        <a href="https://solodevelopment.itch.io" target="_blank">Itch.io Page</a>
       </div>
-
-      <p>
-        Stay tuned for announcements about game jams, collaboration events, and other
-        opportunities to connect with fellow creators.
-      </p>
     </div>
   </main>
 
   <footer>
     <p>© 2024 SoloDevelopment.org — All rights reserved.</p>
   </footer>
-
 </body>
 </html>
