--- a/halloffame.html
+++ b/halloffame.html
@@ -29,99 +29,132 @@
     <section class="content">
       <h2>🏅 SoloDevelopment Hall of Fame 🏅</h2>
       <p>
-        Here we celebrate the amazing solo dev projects that have stood out in our community!
+        Celebrate the amazing solo dev projects that have made their mark in our community!
       </p>
-      <div class="table-container">
-        <table>
-          <thead>
-            <tr>
-              <th>Jam</th>
-              <th>Winner(s)</th>
-              <th>Game</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>🎉 SoloDevelopment Game Jam 5</td>
-              <td>@drahmen, @Emcee, @log64</td>
-              <td>
-                <a href="https://drahmen.itch.io/guardian-of-the-grave" target="_blank"
-                  ><strong>Guardian of the Grave</strong></a>,&nbsp;
-                <a href="https://emceetheguy.itch.io/hanktheimp" target="_blank"
-                  ><strong>Hank The Imp</strong></a>,&nbsp;
-                <a href="https://log64.itch.io/maybel-in-the-hazy-hotel" target="_blank"
-                  ><strong>Maybel in the Hazy Hotel</strong></a>
-              </td>
-            </tr>
-            <tr>
-              <td>🎉 SoloDevelopment Game Jam 4</td>
-              <td>@blackvoidtytan, @gripgrap, @yikag</td>
-              <td>
-                <a href="https://blackvoidmedia.itch.io/mutual-assured-destruction-simulator"
-                  target="_blank"
-                  ><strong>Mutual Assured Destruction Simulator</strong></a>,&nbsp;
-                <a href="https://gripgrap.itch.io/dodge-the-question" target="_blank"
-                  ><strong>Dodge the Question</strong></a>,&nbsp;
-                <a href="https://yikag.itch.io/six-rolls-six" target="_blank"
-                  ><strong>Six Rolls Six</strong></a>
-              </td>
-            </tr>
-            <tr>
-              <td>🏆 Third Marathon Jam</td>
-              <td>@blackvoidtytan</td>
-              <td>
-                <a href="https://blackvoidmedia.itch.io/out-here-alone" target="_blank"
-                  ><strong>Out Here Alone</strong></a>
-              </td>
-            </tr>
-            <tr>
-              <td>❄️ Winter Jam</td>
-              <td>@ensom_</td>
-              <td>
-                <a href="https://uppastgamer.itch.io/track-master" target="_blank"
-                  ><strong>Track Master</strong></a>
-              </td>
-            </tr>
-            <tr>
-              <td>🏆 Second Marathon Jam</td>
-              <td>@fernandolv3</td>
-              <td>
-                <a href="https://fernandolv3.itch.io/scavengersfromplanetx" target="_blank"
-                  ><strong>Scavengers from Planet X</strong></a>
-              </td>
-            </tr>
-            <tr>
-              <td>🎃 Halloween Jam</td>
-              <td>@blackvoidtytan, @radagast08</td>
-              <td>
-                <a href="https://blackvoidmedia.itch.io/i-came-home-tonight" target="_blank"
-                  ><strong>I Came Home Tonight</strong></a>
-              </td>
-            </tr>
-            <tr>
-              <td>🏆 Marathon Jam</td>
-              <td>@lonelylily</td>
-              <td>
-                <a href="https://razzie-dev.itch.io/df-fbla" target="_blank"
-                  ><strong>DF FBLA</strong></a>
-              </td>
-            </tr>
-            <tr>
-              <td>🏆 First r/SoloDevelopment Jam</td>
-              <td>@blackvoidtytan</td>
-              <td>
-                <a href="https://blackvoidmedia.itch.io/theres-something-wrong-with-this-world"
-                  target="_blank"
-                  ><strong>There's Something Wrong With This World</strong></a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+
+      <!-- Most recent jam/event first -->
+      <hr />
+      <h2>🎉 SoloDevelopment Game Jam 5</h2>
       <p>
-        Account Managed by <a href="https://practicalnpc.itch.io/" target="_blank"
-          >PracticalNPC</a
+        <strong>Winners:</strong> @drahmen, @Emcee, @log64
+      </p>
+      <p>
+        <strong>Games:</strong><br />
+        <a href="https://drahmen.itch.io/guardian-of-the-grave" target="_blank" rel="noopener noreferrer"
+          >Guardian of the Grave</a
+        >,
+        <a href="https://emceetheguy.itch.io/hanktheimp" target="_blank" rel="noopener noreferrer"
+          >Hank The Imp</a
+        >,
+        <a href="https://log64.itch.io/maybel-in-the-hazy-hotel" target="_blank" rel="noopener noreferrer"
+          >Maybel in the Hazy Hotel</a
         >
+      </p>
+
+      <hr />
+      <h2>🎉 SoloDevelopment Game Jam 4</h2>
+      <p>
+        <strong>Winners:</strong> @blackvoidtytan, @gripgrap, @yikag
+      </p>
+      <p>
+        <strong>Games:</strong><br />
+        <a
+          href="https://blackvoidmedia.itch.io/mutual-assured-destruction-simulator"
+          target="_blank" rel="noopener noreferrer"
+          >Mutual Assured Destruction Simulator</a
+        >,
+        <a
+          href="https://gripgrap.itch.io/dodge-the-question"
+          target="_blank" rel="noopener noreferrer"
+          >Dodge the Question</a
+        >,
+        <a
+          href="https://yikag.itch.io/six-rolls-six"
+          target="_blank" rel="noopener noreferrer"
+          >Six Rolls Six</a
+        >
+      </p>
+
+      <hr />
+      <h2>🏆 Third Marathon Jam</h2>
+      <p>
+        <strong>Winner:</strong> @blackvoidtytan
+      </p>
+      <p>
+        <strong>Game:</strong><br />
+        <a href="https://blackvoidmedia.itch.io/out-here-alone" target="_blank" rel="noopener noreferrer"
+          >Out Here Alone</a
+        >
+      </p>
+
+      <hr />
+      <h2>❄️ Winter Jam</h2>
+      <p>
+        <strong>Winner:</strong> @ensom_
+      </p>
+      <p>
+        <strong>Game:</strong><br />
+        <a href="https://uppastgamer.itch.io/track-master" target="_blank" rel="noopener noreferrer"
+          >Track Master</a
+        >
+      </p>
+
+      <hr />
+      <h2>🏆 Second Marathon Jam</h2>
+      <p>
+        <strong>Winner:</strong> @fernandolv3
+      </p>
+      <p>
+        <strong>Game:</strong><br />
+        <a href="https://fernandolv3.itch.io/scavengersfromplanetx" target="_blank" rel="noopener noreferrer"
+          >Scavengers from Planet X</a
+        >
+      </p>
+
+      <hr />
+      <h2>🎃 Halloween Jam</h2>
+      <p>
+        <strong>Winners:</strong> @blackvoidtytan, @radagast08
+      </p>
+      <p>
+        <strong>Game:</strong><br />
+        <a href="https://blackvoidmedia.itch.io/i-came-home-tonight" target="_blank" rel="noopener noreferrer"
+          >I Came Home Tonight</a
+        >
+      </p>
+
+      <hr />
+      <h2>🏆 Marathon Jam</h2>
+      <p>
+        <strong>Winner:</strong> @lonelylily
+      </p>
+      <p>
+        <strong>Game:</strong><br />
+        <a href="https://razzie-dev.itch.io/df-fbla" target="_blank" rel="noopener noreferrer"
+          >DF FBLA</a
+        >
+      </p>
+
+      <hr />
+      <h2>🏆 First r/SoloDevelopment Jam</h2>
+      <p>
+        <strong>Winner:</strong> @blackvoidtytan
+      </p>
+      <p>
+        <strong>Game:</strong><br />
+        <a
+          href="https://blackvoidmedia.itch.io/theres-something-wrong-with-this-world"
+          target="_blank" rel="noopener noreferrer"
+          >There's Something Wrong With This World</a
+        >
+      </p>
+
+      <hr />
+      <p style="margin-top: 1rem;">
+        Account Managed by 
+        <a href="https://practicalnpc.itch.io/" target="_blank" rel="noopener noreferrer">
+          PracticalNPC
+        </a>
       </p>
     </section>
   </main>
