--- a/index.html
+++ b/index.html
@@ -1,93 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="description" content="SoloDevelopment - Home" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SoloDevelopment - Home</title>
-  <link rel="stylesheet" href="style.css" />
-
-  <!-- Google Font (Inter) -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
-    rel="stylesheet"
-  />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SoloDevelopment - Home</title>
+    <meta name="description" content="A community for solo game developers to learn, share, and grow together.">
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
+    <!-- Our styles -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Header -->
-  <header>
-    <h1>SoloDevelopment.org</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="events.html">Events</a></li>
-        <li><a href="halloffame.html">Hall of Fame</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <div class="header-content">
+            <h1 class="site-title">SoloDevelopment.org</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="halloffame.html">Hall of Fame</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-  <!-- Main -->
-  <main>
-    <!-- Hero -->
-    <section class="hero">
-      <h2>Welcome, Solo Devs!</h2>
-      <p>
-        We’re a vibrant game dev community focused on solo developers. Join us
-        to share, learn, and grow as we tackle the challenges of making games
-        alone—together!
-      </p>
-      <div class="hero-links">
-        <a href="https://discord.gg/4R5bB9nMSV" target="_blank" rel="noopener noreferrer">
-          Discord
-        </a>
-        <a href="https://www.reddit.com/r/SoloDevelopment" target="_blank" rel="noopener noreferrer">
-          Reddit
-        </a>
-        <a href="https://solodevelopment.itch.io" target="_blank" rel="noopener noreferrer">
-          Itch.io
-        </a>
-      </div>
-    </section>
+    <main>
+        <section class="hero">
+            <div class="hero-content">
+                <h2>Welcome, Solo Devs!</h2>
+                <p>Join our vibrant community of independent game developers. Share, learn, and grow as we tackle the challenges of making games alone—together!</p>
+                <div class="button-group">
+                    <a href="https://discord.gg/4R5bB9nMSV" class="button">Join Discord</a>
+                    <a href="https://github.com/SoloDevelopmentCommunity/SoloDevelopment/wiki" class="button">View Wiki</a>
+                </div>
+            </div>
+        </section>
 
-    <!-- Info Section -->
-    <section class="info-section">
-      <div class="info-box">
-        <h3>Marathon Jams</h3>
-        <p>
-          Test your speed and creativity in our multi-day coding sprints. 
-          Show us what you can build under pressure!
-        </p>
-        <a href="events.html">See Events</a>
-      </div>
+        <section class="features">
+            <div class="cards-grid">
+                <div class="card">
+                    <h3>Marathon Jams</h3>
+                    <p>Test your speed and creativity in our multi-day coding sprints. Show us what you can build under pressure!</p>
+                    <a href="events.html" class="button">View Events</a>
+                </div>
 
-      <div class="info-box">
-        <h3>Hall of Fame</h3>
-        <p>
-          Check out the top solo dev projects that have blown us away.
-          Could yours be next?
-        </p>
-        <a href="halloffame.html">Winners</a>
-      </div>
+                <div class="card">
+                    <h3>Hall of Fame</h3>
+                    <p>Check out the top solo dev projects that have blown us away. Could yours be next?</p>
+                    <a href="halloffame.html" class="button">See Winners</a>
+                </div>
 
-      <div class="info-box">
-        <h3>Community Wiki</h3>
-        <p>
-          Dive into resources, guides, and dev logs curated by our members.
-        </p>
-        <a
-          href="https://github.com/SoloDevelopmentCommunity/SoloDevelopment/wiki"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Visit Wiki
-        </a>
-      </div>
-    </section>
-  </main>
+                <div class="card">
+                    <h3>Community Wiki</h3>
+                    <p>Dive into resources, guides, and dev logs curated by our passionate community members.</p>
+                    <a href="https://github.com/SoloDevelopmentCommunity/SoloDevelopment/wiki" class="button">Browse Wiki</a>
+                </div>
+            </div>
+        </section>
+    </main>
 
-  <!-- Footer -->
-  <footer>
-    <p>© 2024 SoloDevelopment.org — All rights reserved.</p>
-  </footer>
+    <footer>
+        <div class="footer-content">
+            <p>© 2024 SoloDevelopment.org — All rights reserved.</p>
+            <div class="social-links">
+                <a href="https://discord.gg/4R5bB9nMSV">Discord</a>
+                <a href="https://www.reddit.com/r/solodevelopment">Reddit</a>
+                <a href="https://solodevelopment.itch.io">Itch.io</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
